--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
@@ -690,7 +690,8 @@
                                 <div class="btn-group">
                                     <button type="button" id="btnSaveSalesOrder" class="btn btn-success">Save</button> @*<i class="fa fa-check"></i>*@
                                   
-                                    <a class="btn btn-danger active" role="button" href="@Url.Action("Index", "SalesOrder")">Cancel </a> @*<i class="fa fa-times"></i>*@
+                                    @*<a class="btn btn-danger active" role="button" href="@Url.Action("Index", "SalesOrder")">Cancel </a>*@ @*<i class="fa fa-times"></i>*@
+                                    <button type="reset" class="btn btn-danger active" id="btnCancleSalesOrder">Cancel</button>
                                 </div>
                             </div>
 
