--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/View.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/View.cshtml
@@ -7,6 +7,7 @@
         <div class="page-title">
             <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purhase Order Requets Management</h2>
         </div>
+        <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "PurchaseOrderRequest")'"><i class="fa fa-angle-double-left"></i> BACK</button>
     </div>
 
 </div>
