--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/View_Purchase_Return_Details.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/View_Purchase_Return_Details.cshtml
@@ -79,6 +79,7 @@
         <div class="page-title">
             <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purchase Return View</h2>
         </div>
+        <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "PurchaseReturn")'"><i class="fa fa-angle-double-left"></i> BACK</button>
     </div>
 
 </div>
