--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
@@ -86,7 +86,7 @@
                                     <div class="form-group auto-complete">
                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Invoice no</span>
                                         <div class="input-group">
-                                            <input type="text" class="form-control invoice-filter autocomplete-text" name="Receivable.Sales_Invoice_No" id="txtInvoice_no" placeholder="Enter Invoice no to search" value="" data-table="Sales_Invoice" data-col="Branch_ID,Sales_Invoice_No" data-param="hdnBranchIDs" data-field="Branch_Id" data-headernames="Invoice No">
+                                            <input type="text" class="form-control invoice-filter autocomplete-text" name="Receivable.Sales_Invoice_No" id="txtInvoice_no" placeholder="Enter Invoice no to search" value="" data-table="Sales_Invoices" data-col="Branch_Id,Sales_Invoice_No" data-param="hdnBranchIDs" data-field="Branch_Id" data-headernames="Invoice No">
                                             <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                             <input type="hidden" id="hdnSalesInvoiceId" name="Receivable.Sales_Invoice_Id" class="auto-complete-label" />
                                             <input type="hidden" id="hdnSalesInvoiceNo" name="Receivable.Sales_Invoice_No" class="auto-complete-value" />
