Changes in Button Enable and Disable in all Forms, Changes in Vendor, Changes in Calculation of MRP Price at View of Sales Invoice and Return,Validation chanfges in Sales Invoice and Return.

--- a/MyLeoRetailer/Views/PostLogin/Master/Branch/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Branch/Search.cshtml
@@ -68,7 +68,8 @@
 
                             <div class="btn-group">
                                 <button type="button" class="btn btn-success active" value="Create" id="btnCreateBranch">Create</button>
-                                <button class="btn btn-danger active" type="button" style="display:none" value="Edit" id="btnEditBranch">Edit</button>
+                                @*<button class="btn btn-danger active" role="button" style="display:none" value="Edit" id="btnEditBranch">Edit</button>*@
+                                <button role="button" class="btn btn-danger active edit" id="btnEditBranch">Edit</button>
                             </div>
 
                         </div>
