--- a/MyLeoRetailer/Views/PostLogin/Master/Customer/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Customer/Search.cshtml
@@ -90,7 +90,7 @@
 
                             <div class="btn-group">
                                 <button type="button" class="btn btn-success active" value="Create" id="btnCreateCustomer">Create</button>
-                                <button type="button" class="btn btn-danger active" style="display:none" value="Edit" id="btnEditCustomer">Edit</button>
+                                <button role="button" class="btn btn-danger active edit" id="btnEditCustomer">Edit</button>
                             </div>
 
                         </div>
