--- a/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Search.cshtml
@@ -126,8 +126,10 @@
 
                                 <div class="btn-group pull-right">
                                     @*  <a class="btn btn-info active" role="button" id="btnView" style="display:none">View </a>*@
-                                    <a class="btn btn-success active" role="button" id="btnDispatch" style="display:none">Dispatch </a>
+                                   
+                                     @*<a class="btn btn-success active" role="button" id="btnDispatch" style="display:none">Dispatch </a>*@
 
+                                    <button role="button" class="btn btn-success active edit" id="btnDispatch">Dispatch</button>
                                 </div>
 
                             </div>
