--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
@@ -155,7 +155,8 @@
                                         <br />
                                         <button type="button" id="btnSearchReceivable" class="btn btn-success active">Search</button>
                                         <button type="reset" id="btnResetReceivable" class="btn btn-danger active">Reset</button>
-                                        <button type="button" id="btnPay" class="btn btn-primary active">Pay</button>
+                                        @*<button type="button" id="btnPay" class="btn btn-primary active">Pay</button>*@
+                                        <button role="button" disabled class="btn btn-primary active edit" id="btnPay">Pay</button>
                                         
                                     </div>
                                 </div>
