--- a/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Search.cshtml
@@ -65,7 +65,8 @@
                             <div class="btn-group">
                                 
                                 <button type="button" class="btn btn-success active" value="Create" id="btncreateVC" @*onclick="location.href='@Url.Action("Index", "VendorContact")'"*@>Create</button>
-                                <button type="button" class="btn btn-danger active" style="display:none;" id="btnVendorContact">Edit</button>
+                                @*<button type="button" class="btn btn-danger active" style="display:none;" id="btnVendorContact">Edit</button>*@
+                                <button role="button" class="btn btn-danger active edit" id="btnVendorContact">Edit</button>
                             </div>
 
                         </div>
