--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Search.cshtml
@@ -51,7 +51,8 @@
 
                             <div class="btn-group">
                                 <button role="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseInvoice">Create</button>
-                                <button class="btn btn-danger active" disabled value="Edit" id="btnViewPurchaseInvoice">View</button>
+                                <button class="btn btn-danger active edit" disabled value="Edit" id="btnViewPurchaseInvoice">View</button>
+
                             </div>
 
                         </div>
