--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Search.cshtml
@@ -62,7 +62,7 @@
                             <div class="btn-group">
                                 <button type="button" class="btn btn-success active" value="Create" id="btnCreate">Create</button>
                                 @*<a type="button" class="btn btn-success active" href="/purchase-return-request/create-purchase-return-request" id="btnCreate">Create</a>*@
-                                <button type="button" disabled class="btn btn-danger active" value="Edit" id="btnView">View</button>
+                                <button type="button" disabled class="btn btn-danger active edit" value="Edit" id="btnView">View</button>
                             </div>
 
                         </div>
