--- a/MyLeoRetailer/Views/PostLogin/Master/Challan/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Challan/Index.cshtml
@@ -292,7 +292,7 @@
         <div class="col-md-12">
             <div class="btn-group">
                 <button type="button" class="btn btn-success active" id="btnEmployeeSave">Save</button>
-                <button type="button" class="btn btn-danger active">Cancel</button>
+                <button type="reset" class="btn btn-danger active">Reset</button>
             </div>
         </div>
     </div>
