--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Employee_Branch_Mapping.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Employee_Branch_Mapping.cshtml
@@ -96,7 +96,7 @@
                 </div>
 
                 <button type="button" id="btnSave" class="btn btn-success">Save</button>
-                <button type="button" class="btn btn-danger active" onclick="location.href='@Url.Action("Search", "Employee")'">Cancel</button>
+                <button type="button" class="btn btn-danger active" onclick="location.href='@Url.Action("Search", "Employee")'">Reset</button>
             </div>
         </div>
 
