--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
@@ -691,7 +691,7 @@
                                     <button type="button" id="btnSaveSalesOrder" class="btn btn-success">Save</button> @*<i class="fa fa-check"></i>*@
                                   
                                     @*<a class="btn btn-danger active" role="button" href="@Url.Action("Index", "SalesOrder")">Cancel </a>*@ @*<i class="fa fa-times"></i>*@
-                                    <button type="reset" class="btn btn-danger active" id="btnCancleSalesOrder">Cancel</button>
+                                    <button type="reset" class="btn btn-danger active" id="btnCancleSalesOrder">Reset</button>
                                 </div>
                             </div>
 
