--- a/MyLeoRetailer/Views/PostLogin/Master/Alteration/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Alteration/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MyLeoRetailer.Models.AlterationViewModel
 
-
+<script src="~/Content/Atlant/js/plugins/maskedinput/jquery.maskedinput.min.js"></script>
 <script src="~/Scripts/Modules/Alteration/Alteration_events.js"></script>
 <script src="~/Scripts/Modules/Alteration/Alteration_methods.js"></script>
 <script src="~/Scripts/Modules/common_methods.js"></script>
@@ -65,7 +65,7 @@
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile no</span>
-                        <input type="text" class="form-control" placeholder="Enter mobile no." maxlength="12" name="Alteration.Customer_Mobile_No" value="@Model.Alteration.Customer_Mobile_No" />
+                        <input type="text" class="mask_mobile_no form-control" placeholder="Enter mobile no." name="Alteration.Customer_Mobile_No" value="@Model.Alteration.Customer_Mobile_No" />
                         <input type="hidden" name="Alteration.Alteration_ID" id="hdnAlteration_ID" value="@Model.Alteration.Alteration_ID">
                         @*<input type="hidden" name="VendorContact.Vendor_Contact_Name" value="@Model.VendorContact.Vendor_Contact_Name">
                             <input type="hidden" name="VendorContact.IsActive" value="@Model.VendorContact.IsActive">*@
@@ -149,7 +149,7 @@
                 <div class="btn-group">
                     <button type="button" class="btn btn-success active" id="btnSaveAlteration">Save</button>
 
-                    <button type="reset" class="btn btn-danger active">Cancel</button>
+                    <button type="reset" class="btn btn-danger active">Reset</button>
 
                 </div>
 
