--- a/MyLeoRetailer/Views/PostLogin/Master/Color/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Color/Index.cshtml
@@ -103,11 +103,11 @@
                                 @*@if (Model.Color.IsActive == false)*@
                                 @if (Model.Color.IsActive == 0)
                                 {
-                                    <input value="@Model.Color.IsActive.ToString()" name="Color.IsActive" type="checkbox">
+                                    <input value="@Model.Color.IsActive.ToString()" name="Color.IsActive" type="checkbox" id="Flag">
                                 }
                                 else
                                 {
-                                    <input value="@Model.Color.IsActive.ToString()" name="Color.IsActive" checked="checked" type="checkbox">
+                                    <input value="@Model.Color.IsActive.ToString()" name="Color.IsActive" checked="checked" type="checkbox" id="Flag">
                                 }
                                 @*<input type="hidden" value="@Model.Color.IsActive" />*@
                                 <span></span>
@@ -118,7 +118,7 @@
                     <div style="padding-left: 0px; padding-top: 0px; padding-bottom: 20px; margin-bottom: 15px; border-bottom: 1px solid #DDD;">
                         <div class="btn-group">
                             <button class="btn btn-success active" id="btnSaveColor" type="button">Save</button>
-                            <button type="reset" class="btn btn-danger active" id="btnReset">Cancel</button>
+                            <button type="reset" class="btn btn-danger active" id="btnReset">Reset</button>
                         </div>
                     </div>
 
