--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Index.cshtml
@@ -156,11 +156,11 @@
                     <h4 style="margin-top: 0px;">Communication detail.</h4>
 
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter mobile number 1." name="Employee.Employee_Mobile1" value="@Model.Employee.Employee_Mobile1" maxlength="12" />
+                        <input type="text" class="mask_mobile_no form-control" id="txtEmployeeMobile1" placeholder="Enter mobile number 1." name="Employee.Employee_Mobile1" value="@Model.Employee.Employee_Mobile1" />
                     </div>
 
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter mobile number 2." name="Employee.Employee_Mobile2" value="@Model.Employee.Employee_Mobile2" maxlength="12" />
+                        <input type="text" class="mask_mobile_no form-control" id="txtEmployeeMobile2" placeholder="Enter mobile number 2." name="Employee.Employee_Mobile2" value="@Model.Employee.Employee_Mobile2" />
                     </div>
 
                     <div class="form-group">
