--- a/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
@@ -129,7 +129,7 @@
                 <div class="btn-group">
                     <button type="button" class="btn btn-success active" id="btnGiftVoucherSave">Save</button>
                     @*<button type="reset"  class="btn btn-danger active" id="btnCancel">Cancel</button>*@
-                    <button type="reset" id="btnCancel" class="btn btn-danger active">Cancel</button>
+                    <button type="reset" id="btnCancel" class="btn btn-danger active">Reset</button>
                     <button type="button" class="btn btn-twitter active" id="btnGiftVoucherPrint">Print</button>
 
                 </div>
