--- a/MyLeoRetailer/Views/PostLogin/SalesReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesReturn/Index.cshtml
@@ -424,7 +424,7 @@
                         <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02);padding-left: 20px; padding-right:0px; padding-top: 20px; padding-bottom: 20px; margin-bottom: 15px; border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
                             <div class="btn-group">
                                 <button type="button" id="btnSaveSalesReturn" class="btn btn-success active">Save</button>
-                                <a class="btn btn-danger active" role="button" href="@Url.Action("Index", "SalesReturn")">Cancel </a>
+                                <a class="btn btn-danger active" role="button" href="@Url.Action("Index", "SalesReturn")">Reset </a>
                             </div>
                         </div>
 
