--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
@@ -483,7 +483,7 @@
 
                 <div class="btn-group">
                     <button type="button" class="btn btn-success active" id="btnSavePurchaseOrder">Save</button>
-                    <button type="reset" class="btn btn-danger active" id="btnCanclePurchaseOrder">Cancel</button>
+                    <button type="reset" class="btn btn-danger active" id="btnCanclePurchaseOrder">Reset</button>
                 </div>
 
             </div>
