Purchase Transactions testing

--- a/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
@@ -42,7 +42,7 @@
 
 
 
-        <input type="hidden" id="hdnMobile" name="Customer.Mobile">
+        <input type="hidden" id="hdnMobile">
 
         <input type="hidden" id="hdnInvoiceDate" name="Customer.Invoice_Date">
 
