--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Index.cshtml
@@ -74,7 +74,9 @@
                             <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                         </div>
                     </div>
-                                     
+
+                 
+         
 
                     <div class="form-group">
                         <div class="col-xs-6 col-sm-6 col-md-8" style="padding-left: 0px;">
@@ -160,7 +162,7 @@
                     </div>
 
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter mobile number 2." name="Employee.Employee_Mobile2" value="@Model.Employee.Employee_Mobile2" maxlength="12" />
+                        <input type="text" class=" form-control" placeholder="Enter mobile number 2." name="Employee.Employee_Mobile2" value="@Model.Employee.Employee_Mobile2" maxlength="12" />
                     </div>
 
                     <div class="form-group">
@@ -169,7 +171,10 @@
 
 
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Enter email address." name="Employee.Employee_EmailId" value="@Model.Employee.Employee_EmailId" maxlength="50" />
+                        <input type="text" class="form-control" placeholder="Enter email address." id="txt_Emailid"name="Employee.Employee_EmailId" value="@Model.Employee.Employee_EmailId" maxlength="50" />
+                        @*Added by vinod mane on 18/10/2016*@
+                        <input type="hidden" id="hdnEmp_Emailid" value="@Model.Employee.Employee_EmailId" />
+                        @*End*@
                     </div>
 
                     <div class="form-group">
