--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
@@ -386,7 +386,7 @@
 
         </div>
 
-        <div class="row">
+        <div class="row PurchaseOrder">
             <div class="col-md-12 table-responsive">
 
                 <table class="table table-bordered table-hover" style="width:3000px; max-width:none;" id="tblPurchaseOrderItems">
