Purchase_Order and Purchase_Order_Request Validations and testing

--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
@@ -101,9 +101,10 @@
         </div>
 
         <div class="row">
-            <div class="col-md-3" style="border-bottom: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 90px;">
-
+            <div class="col-md-3" style="border-bottom: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 90px;">    
+                
                 <input type="hidden" id="hdf_Article_No" />
+                                        
                 <div class="block">
                     <!-- This should be an auto complete field / lookup field like Krypton with search filter / dropdown field -->
                     <div class="form-group">
@@ -112,7 +113,7 @@
                             <option value="">Select Article No.</option>
                         </select>
                     </div>
-                </div>
+                </div>               
             </div>
 
             <div class="col-md-3" style="border-bottom: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 90px;">
@@ -246,7 +247,7 @@
 
         </div>
 
-        <div class="row">
+        <div class="row PurchaseOrderRequest">
             <div class="col-md-12 table-responsive">
 
                 <table class="table table-bordered table-hover" style="width:3000px; max-width:none;" id="tblPurchaseOrderRequestItems">
