--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Print.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Print.cshtml
@@ -7,13 +7,17 @@
 <link rel="stylesheet" type="text/css" id="theme" href="../Content/Atlant/css/theme-default.css" />
 <script type="text/javascript" src="../Content/Atlant/js/plugins/jquery/jquery.min.js"></script>
 
+<script src="~/Scripts/Modules/PrintThis.js"></script>
+
 <script type="text/javascript">
     $(document).ready(function () {
         $('#btnPrint').click(function () {
 
             $("#div_non_printable").hide();
 
-            window.print();
+            // window.print();
+
+            $('#Div_Print').printThis();
 
             $("#div_non_printable").show();
 
@@ -43,10 +47,17 @@
                         <br />
                         <br />
 
-                        <h2>Purchase Order Invoice</h2>
+                        @*<h2>Purchase Order Invoice</h2>*@
 
                         <div class="box box-default" id="Div_Print">
                             <div class="box-body">
+
+                                <div class="row">
+                                    <div class="invoice-col" style="float: left;">
+                                        <img src="@Model.PurchaseOrder.Logo_Path" width="42" height="42">
+                                    </div><!-- /.col -->
+
+                                </div>
 
                                 <div class="row">
 
@@ -54,7 +65,7 @@
                                         <div class="form-group">
 
                                             <div class="form-group">
-                                                <label for="txtStore_Name" style="color: #333" class="">Company Name</label>
+                                                <label for="txtStore_Name" style="color: #333" class=""><b>MyLeo</b></label>
 
                                                 <br />
                                                 <label for="txtStore_Address1" style="color: #333" class="">Company Address1</label>
@@ -174,11 +185,11 @@
                                                         <th width="">13</th>
                                                         <th width="">14</th>
                                                         <th width="">15</th>
-                                                        <th width="">16</th>
+                                                        @*<th width="">16</th>
                                                         <th width="">17</th>
                                                         <th width="">18</th>
                                                         <th width="">19</th>
-                                                        <th width="">20</th>
+                                                        <th width="">20</th>*@
                                                         <th width="">QTY</th>
                                                         <th width="">Center Size</th>
                                                         <th width="">Size Diff</th>
@@ -194,7 +205,7 @@
 
                                                             foreach (var item in Model.PurchaseOrder.PurchaseOrderItems)
                                                             {
-                                                                int colspan = 20;
+                                                                int colspan = 15;
                                                                 if (item.sizes.Count > 0)
                                                                 {
                                                                     colspan = colspan - item.sizes.Count;
@@ -238,7 +249,7 @@
 
                                                     @{
                                                         <tr>
-                                                            <th colspan="21" style="text-align: left;"> Remark : @Model.PurchaseOrder.Comment </th>
+                                                            <th colspan="16" style="text-align: left;"> Remark : @Model.PurchaseOrder.Comment </th>
                                                             @*<th colspan="8" style="text-align: left;"> Total : @Model.PurchaseOrder.Net_Amount </th>*@
                                                             <th colspan="5" style="text-align: left;"> Total : @Model.PurchaseOrder.PurchaseOrderItems.Sum(a => a.Total_Amount) </th>
 
