--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
@@ -25,7 +25,7 @@
     <div class="content-frame-top">
         <div class="col-md-12">
             <div class="page-title">
-                <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purhase Order Requets Management</h2>
+                <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purhase Order Request Management</h2>
             </div>
             <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "PurchaseOrderRequest")'"><i class="fa fa-angle-double-left"></i> BACK</button>
             </div>
@@ -249,7 +249,7 @@
 
         </div>
 
-        <div class="row PurchaseOrderRequest">
+        <div class="row PurchaseOrderRequest scroll-bar" style="height:300px">
             <div class="col-md-12 table-responsive">
 
                 <table class="table table-bordered table-hover" style="width:3000px; max-width:none;" id="tblPurchaseOrderRequestItems">
