--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Index.cshtml
@@ -27,7 +27,7 @@
     <div class="content-frame-top">
         <div class="col-md-12">
             <div class="page-title">
-                <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purhase order Management</h2>
+                <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purhase Order Management</h2>
             </div>
             <button class="btn btn-danger pull-right" onclick="location.href='@Url.Action("Search", "PurchaseOrder")'"><i class="fa fa-angle-double-left"></i> BACK</button>
         </div>
@@ -384,7 +384,7 @@
 
         </div>
 
-        <div class="row PurchaseOrder">
+        <div class="row PurchaseOrder scroll-bar">
             <div class="col-md-12 table-responsive">
 
                 <table class="table table-bordered table-hover" style="width:3000px; max-width:none;" id="tblPurchaseOrderItems">
