--- a/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Index.cshtml
@@ -128,7 +128,7 @@
 
                 <div class="btn-group">
                     <button class="btn btn-success active" type="button" id="btnGiftVoucherSave">Save</button>
-                    <button type="reset"  class="btn btn-danger active" id="btnCancel">Cancel</button>
+                    <button type="reset"  class="btn btn-danger active" id="btnCancel">Reset</button>
                     <button class="btn btn-twitter active" type="button" id="btnGiftVoucherPrint">Print</button>
 
                 </div>
