--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
@@ -226,7 +226,7 @@
                     <div class="block" style="margin-top:20px;">
                         <div class="btn-group">
                             <button type="button" class="btn btn-success active" id="btnAddDetailsPurchaseOrderRequest">Add Details</button>
-                            <button type="button" class="btn btn-danger active" id="btnResetPurchaseOrderRequest">Cancel</button>
+                            <button type="button" class="btn btn-danger active" id="btnResetPurchaseOrderRequest">Reset</button>
                         </div>
                     </div>
                 </div>
@@ -341,7 +341,7 @@
 
                 <div class="btn-group">
                     <button type="button" class="btn btn-success active" id="btnSavePurchaseOrderRequest">Save</button>
-                    <button type="reset" class="btn btn-danger active" id="btnCanclePurchaseOrderRequest">Cancel</button>
+                    <button type="reset" class="btn btn-danger active" id="btnCanclePurchaseOrderRequest">Reset</button>
                 </div>
 
             </div>
