--- a/MyLeoRetailer/Views/PostLogin/Master/Alteration/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Alteration/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MyLeoRetailer.Models.AlterationViewModel
 
-
+<script src="~/Content/Atlant/js/plugins/maskedinput/jquery.maskedinput.min.js"></script>
 <script src="~/Scripts/Modules/Alteration/Alteration_events.js"></script>
 <script src="~/Scripts/Modules/Alteration/Alteration_methods.js"></script>
 <script src="~/Scripts/Modules/common_methods.js"></script>
@@ -65,7 +65,7 @@
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile no</span>
-                        <input type="text" class="form-control" placeholder="Enter mobile no." maxlength="12" name="Alteration.Customer_Mobile_No" value="@Model.Alteration.Customer_Mobile_No" />
+                        <input type="text" class="mask_mobile_no form-control" placeholder="Enter mobile no." name="Alteration.Customer_Mobile_No" value="@Model.Alteration.Customer_Mobile_No" />
                         <input type="hidden" name="Alteration.Alteration_ID" id="hdnAlteration_ID" value="@Model.Alteration.Alteration_ID">
                         @*<input type="hidden" name="VendorContact.Vendor_Contact_Name" value="@Model.VendorContact.Vendor_Contact_Name">
                             <input type="hidden" name="VendorContact.IsActive" value="@Model.VendorContact.IsActive">*@
@@ -125,7 +125,7 @@
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Alteration date.</span>
                         <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
-                            <input type="text" class="form-control datepicker" name="Alteration.Alteration_Date" placeholder="Alteration date." value="@((Model.Alteration.Alteration_Date == DateTime.MinValue ? "" : Model.Alteration.Alteration_Date.ToString("MM-dd-yyyy")))" reado readonly />
+                            <input type="text" class="form-control datepicker" name="Alteration.Alteration_Date" placeholder="Alteration date." value="@((Model.Alteration.Alteration_Date == DateTime.MinValue ? "" : Model.Alteration.Alteration_Date.ToString("MM-dd-yyyy")))" />
                             <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                         </div>
                     </div>
@@ -134,7 +134,7 @@
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Delivery date</span>
                         <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
-                            <input type="text" class="form-control datepicker" placeholder="Delivery date." name="Alteration.Delivery_Date" value="@((Model.Alteration.Delivery_Date == DateTime.MinValue ? "" : Model.Alteration.Delivery_Date.ToString("MM-dd-yyyy")))" reado readonly />
+                            <input type="text" class="form-control datepicker" placeholder="Delivery date." name="Alteration.Delivery_Date" value="@((Model.Alteration.Delivery_Date == DateTime.MinValue ? "" : Model.Alteration.Delivery_Date.ToString("MM-dd-yyyy")))" />
                             <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                         </div>
                     </div>  
@@ -149,7 +149,7 @@
                 <div class="btn-group">
                     <button type="button" class="btn btn-success active" id="btnSaveAlteration">Save</button>
 
-                    <button type="reset" class="btn btn-danger active">Cancel</button>
+                    <button type="reset" class="btn btn-danger active">Reset</button>
 
                 </div>
 
