--- a/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Index.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Index";
 }
 
+<script src="~/Content/Atlant/js/plugins/maskedinput/jquery.maskedinput.min.js"></script>
 <script src="~/Scripts/Modules/VendorContact/vendorcontact_events.js"></script>
 <script src="~/Scripts/Modules/VendorContact/vendorcontact_methode.js"></script>
 <script src="~/Scripts/Modules/VendorContact/search_vendorcontact_methode.js"></script>
@@ -143,12 +144,12 @@
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile no1</span>
-                        <input type="text" class="form-control" maxlength="12" placeholder="Enter mobile number 1." name="VendorContact.Mobile1" value="@Model.VendorContact.Mobile1" />
+                        <input type="text" class="mask_mobile_no form-control" placeholder="Enter mobile number 1." id="txtMobile1" name="VendorContact.Mobile1" value="@Model.VendorContact.Mobile1" />
                     </div>
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile no2</span>
-                        <input type="text" class="form-control" maxlength="12" placeholder="Enter mobile number 2." name="VendorContact.Mobile2" value="@Model.VendorContact.Mobile2" />
+                        <input type="text" class="mask_mobile_no form-control" placeholder="Enter mobile number 2." id="txtMobile2" name="VendorContact.Mobile2" value="@Model.VendorContact.Mobile2" />
                     </div>
 
                     <div class="form-group">
@@ -164,7 +165,7 @@
                 <div class="btn-group">
                     <button type="button" class="btn btn-success active" id="btnSaveVendorContact">Save</button>
 
-                    <button type="reset" id="btnCancel" class="btn btn-danger active">Cancel</button>
+                    <button type="reset" id="btnCancel" class="btn btn-danger active">Reset</button>
                     @*<a class="btn btn-danger active" id="btnCancel" role="button" >Cancel </a>*@
                 </div>
 
