--- a/MyLeoRetailer/Views/PostLogin/SalesReturn/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesReturn/Search.cshtml
@@ -89,9 +89,9 @@
 
                             <div class="col-md-2" style="text-align: right; padding-top: 27px; padding-bottom: 0px; padding-right: 50px; padding-left: 0px;">
 
-                                <div class="btn-group">                                   
+                                <div class="btn-group pull-right">                                   
                                     <a class="btn btn-success active" role="button" href="@Url.Action("Index", "SalesReturn")">Create </a>
-                                    <button role="button" class="btn btn-danger active" id="btnView">View</button>
+                                    <button role="button" class="btn btn-danger active edit" id="btnView">View</button>
 
                                 </div>
 
