--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
@@ -97,7 +97,7 @@
 
                     <div class="row">
 
-                        <div class="col-md-5" style="padding: 0px;">                         
+                        <div class="col-md-5" style="padding: 0px;">
 
                             <div class="form-group auto-complete">
                                 <div class="input-group">
@@ -122,10 +122,14 @@
                                 @*<button class="btn btn-success active" onclick="location.href='@Url.Action("Index","Employee")'">Create</button>*@
                                 @*<a class="btn btn-success active" role="button" href="@Url.Action("Index", "Employee")">Create </a>
                                     <button class="btn btn-danger active" style="display:none;" id="btnEdit" >Edit</button>*@
-                                <button type="button" class="btn btn-info active" value="Create" id="btnMapBranchEmployee" style="display:none">Map Branch to Employee </button>
+
                                 <button type="button" class="btn btn-success active" value="Create" id="btnCreateEmployee">Create</button>
                                 @*modification*@
-                                <button type="button" class="btn btn-danger active" value="Edit" style="display:none;" id="btnEditEmployee">Edit</button>
+                                @*<button type="button" class="btn btn-danger active" value="Edit" style="display:none;" id="btnEditEmployee">Edit</button>*@
+                                <button role="button" class="btn btn-danger active edit" id="btnEditEmployee">Edit</button>
+                                <button role="button" class="btn btn-info active edit" id="btnMapBranchEmployee">Map Branch to Employee </button>
+
+
                                 @*End*@
                             </div>
 
@@ -145,7 +149,7 @@
 
         @*<div class="col-md-12" style="padding: 0px;" id="divDynamicTable">
 
-        </div>*@
+            </div>*@
 
         <div class="col-md-12" style="padding: 0px;text-align:center;" id="divEmployeePager">
 
