--- a/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Search.cshtml
@@ -74,7 +74,9 @@
                                 
                                 <button type="button" class="btn btn-success active" value="Create" id="btncreateGV">Create</button>
                                
-                                <button class="btn btn-danger active" type="button" style="display:none;" id="btnGiftVoucher">Edit</button>
+                                @*<button class="btn btn-danger active" type="button" style="display:none;" id="btnGiftVoucher">Edit</button>*@
+
+                                <button role="button" disabled class="btn btn-danger active edit" id="btnGiftVoucher">Edit</button>
                             </div>
 
                         </div>
