changes in Product add Colour_Id when get barcodes to print

--- a/MyLeoRetailer/Views/PostLogin/Master/Product/_ProductPrizing.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Product/_ProductPrizing.cshtml
@@ -68,6 +68,7 @@
             </div>
         </div>
         <input type="hidden" id="hdn_ProductId" name="Product.Product_Id" class="auto-complete-value" value="@Model.Product.Product_Id" />
+        <input type="text" id="hdn_Colour_Id" name="Product.Colour_Id" class="auto-complete-value" value="@Model.Product.Colour_Id" />
         @*<input type="hidden" name="PriceVerifications" />*@
         <label style="color: #b64645; display:none;" class="help-block pull-right" id="lblColorPriceError">Select Colour to Pricing.</label> 
 
