--- a/MyLeoRetailer/Views/PostLogin/Master/Alteration/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Alteration/Search.cshtml
@@ -66,7 +66,7 @@
                                     <input type="text" class="form-control color-filter autocomplete-text" name="Filter.Customer_Mobile_No" id="txtCustomer_Mobile_No" placeholder="Enter customer mobile number to search." data-table="Alteration" data-col="Alteration_ID,Customer_Mobile_No" data-headernames="Alteration No..">
                                     <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                     @*<input type="hidden" name="Filter.Vendor_Id" id="hdnVendorID">*@
-                                    <input type="hidden" id="hdnAlteration_ID" name="Alteration.Alteration_ID" value="@Model.Alteration.Alteration_ID">
+                                    <input type="hidden" id="hdnAlteration_ID" name="Filter.Alteration_ID" value="@Model.Filter.Alteration_ID">
                                     <input type="hidden" id="hdnCustomer_Mobile_No" value="" name="Filter.Customer_Mobile_No" class="auto-complete-value" />
 
                                 </div>
