--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Search.cshtml
@@ -42,7 +42,7 @@
                             <div class="form-group">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Invoice No.</span>
                                 <input type="text" class="form-control" name="Filter.Purchase_Invoice_No" placeholder="Enter Purchase Invoice No to search." />
-                                <input type="hidden" id="hdnPurchaseInvoiceId" name="PurchaseInvoice.Purchase_Invoice_Id" value="@Model.PurchaseInvoice.Purchase_Invoice_Id" />
+                                <input type="hidden" id="hdnPurchaseInvoiceId" name="Filter.Purchase_Invoice_Id" value="@Model.Filter.Purchase_Invoice_Id" />
                             </div>
 
                         </div>
