--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/_Update_GR_No.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/_Update_GR_No.cshtml
@@ -15,7 +15,7 @@
         <div class="col-md-12" style="margin-bottom: 10px; padding-top: 1px;">
             <div class=" form-group">
                 <div class="input-group pull-right">
-                    <input type="hidden" id="hdnPurchaseReturnId" name="PurchaseReturn.Purchase_Return_Id" value="@Model.PurchaseReturn.Purchase_Return_Id" />
+                    <input type="hidden" id="hdnPurchaseReturnId" name="Filter.Purchase_Return_Id" value="@Model.Filter.Purchase_Return_Id" />
 
                     <button type="button" class="btn btn-success active" value="Update" id="btnUpdate">Update</button>
                 </div>
