--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Print.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Print.cshtml
@@ -35,6 +35,19 @@
     });
 </script>
 
+<style>
+    img {
+        display: block;
+        position: relative;
+        left: 50%;
+    }
+
+    .input-group-addon {
+        background-color: #33414e !important;
+        color: #fff !important;
+    }
+</style>
+
 @{Html.RenderPartial("_Message");}
 <div class="content-wrapper">
 
