--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Search.cshtml
@@ -32,10 +32,10 @@
             <div class="block">
 
                 <form role="form" id="frmPurchaseReturnRequest">
-                    <input type="hidden" id="hdnPurchase_Return_Request_Id" name="PurchaseReturnRequest.Purchase_Return_Request_Id" value="@Model.PurchaseReturnRequest.Purchase_Return_Request_Id"/>
+                    <input type="hidden" id="hdnPurchase_Return_Request_Id" name="Filter.Purchase_Return_Request_Id" value="@Model.Filter.Purchase_Return_Request_Id" />
                     <div class="row">
 
-                        <div class="col-md-3">
+                        <div class="col-md-5">
 
                             <div class="form-group">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Vendor Name.</span>
